--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -145,7 +145,9 @@ img[src=""] {
   overflow: auto;
 }
 .center {
-  text-align:center;
+  display: inline-block;
+  text-align: center;
+  width: 100%;
 }
 .float-right {
   float:right;
@@ -363,13 +365,17 @@ img[src=""] {
   flex-direction: column;
   align-items: center;
   max-height: 70vh;
-  overflow: hidden;
+  overflow: scroll;
 }
 .modal-text {
   font-weight: normal;
   width: 100%;
   white-space: pre-wrap;
-  overflow: scroll;
+}
+.modal-comment {
+  width: 100%;
+  margin-top: 0.5rem;
+  border-top: solid 0.1rem var(--black);
 }
 .loading-text {
   display: flex;
@@ -1153,16 +1159,33 @@ table.simple-table td {
   position: absolute;
 }
 .avatar img:nth-child(1) {
-  width: 2.2rem;
-  height: 2.2rem;
+  width: 80%;
+  height: 80%;
   border: solid 0.08rem black;
   border-radius: 50%;
   overflow: hidden;
 }
 .avatar img:nth-child(2) {
-  width: 3rem;
-  height: 3rem;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
+}
+.comment {
+  display: flex;
+  align-items: center;
+  margin: 0.5rem auto;
+}
+.comment .avatar {
+  width: 2rem;
+  height: 2rem;
+}
+.member-commit {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.5rem;
+}
+.member-commit :first-child {
+  font-size: x-small;
 }
 .empty-group {
   position: relative;
