--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -53,11 +53,15 @@ main {
   display: flex;
   font-weight: bold;
   flex-direction: row;
-  width: 90%;
-  height: calc(100% - 2rem);
+  width: 95%;
+  height: calc(100% - 8rem);
   align-items: center;
   align-self: center;
-  overflow: hidden;
+  padding-left: 3%;
+  padding-right: 2%;
+  padding-top: 3rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 a {
   color: unset;
@@ -107,6 +111,9 @@ img[src=""] {
 }
 .hide {
   display: none !important;
+}
+.back{
+  z-index: 0 !important;
 }
 .sway {
   transform-origin: 50% 0;
@@ -336,6 +343,8 @@ img[src=""] {
 .modal-content {
   max-height: 90vh;
   max-width: 80vw;
+  position: absolute;
+  top: 16rem;
   padding: 0.5rem;
   padding-top: 1rem;
   background: white;
@@ -891,16 +900,23 @@ table.simple-table td {
   box-shadow: 0.2rem 0.2rem 0 0 rgba(0, 0, 0, 0.2);
 }
 .wall {
-  z-index: 0;
   position: relative;
-  height: calc(100% - 12rem);
+  height: 100%;
   max-width: 1800px;
   padding: 0;
   margin: 1rem;
   margin-top: 7rem;
 }
+.notice-wall {
+  width: 20%;
+  background: transparent;
+  border: none;
+  padding-top: 1rem;
+  z-index : 1;
+}
 .wall-container {
-  position: relative;
+  z-index: 1;
+  position: absolute;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -908,7 +924,7 @@ table.simple-table td {
   align-content: flex-start;
   justify-content: space-evenly;
   width: 100%;
-  height: calc(100% - 2rem);
+  height: fit-content;
   background: rgb(255, 250, 235, 0.85);
   border: solid 0.1rem var(--black);
   padding: 1rem 0;
@@ -916,6 +932,16 @@ table.simple-table td {
 }
 .wall-container::-webkit-scrollbar {
   display: none;
+}
+.back-button {
+  font-size: 2rem;
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  margin-left: -7rem;
+  border: solid 0.1rem var(--black);
+  border-radius: 0.5rem;
+  box-shadow: 0.2rem 0.2rem 0 0 rgba(0, 0, 0, 0.2);
 }
 .wall .eaves {
   position: absolute;
