--- a/templates/group.html
+++ b/templates/group.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="zh-CN"><head>
+<html dir="ltr" lang="zh-CN">
+
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="referrer" content="no-referrer">
@@ -8,22 +10,17 @@
   <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="stylesheet" href="lib/style.css">
   <style>
-    .wall-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    #group-page {
+    /* #group-page {
       z-index: 1;
     }
+
     #data-page {
       z-index: 2;
     }
+
     #setting-page {
       z-index: 3;
-    }
+    } */
   </style>
 </head>
 
@@ -42,27 +39,23 @@
       <span></span><span></span><span></span><span></span><span></span>
     </span>
     <div id="cloud_container">
-</div></div>
+    </div>
   </div>
   <main>
-  <div class="wall notice-wall" style="
-  width: 20%;
-  background: transparent;
-  border: none;
-  overflow-y: scroll;
-  padding-top: 1rem;
-">
-  </div>
+    <div class="wall notice-wall">
+    </div>
     <div class="wall" style="width: 75%;">
       <div class="eaves">
         <div class="gloss"></div>
         <div class="eaves-container">
+          <div class="back-button btn" onclick="SwitchPop()">◁　</div>
           <a id="group_button" onclick="groupPage()">小班列表</a>
           <a id="data_button" onclick="dataPage()">数据查询</a>
           <a id="setting_button" onclick="settingPage()">系统设置</a>
         </div>
       </div>
       <div class="wall-container group-page hide" id="group-page">
+        <div class="back-button" on-click="SwitchPop()">◁　</div>
         <span class="loading-text hide">
           <div class="loader">
             <span></span>
@@ -79,6 +72,7 @@
         </div>
       </div>
       <div class="wall-container data-page hide" id="data-page">
+        <div class="back-button" on-click="SwitchPop()">◁　</div>
         <span class="loading-text">
           <div class="loader">
             <span></span>
@@ -165,6 +159,7 @@
         </div>
       </div>
       <div class="wall-container setting-page hide" id="setting-page">
+        <div class="back-button" on-click="SwitchPop()">◁　</div>
         <span class="loading-text">
           <div class="loader">
             <span></span>
@@ -179,17 +174,19 @@
               <label for="cache_second_input">数据缓存时长</label>
               <input id="cache_second_input" type="number" />
             </div>
-            <span class="setting-desc">在[数据查询]页面查询时, 本程序会对今日数据进行一次查询, 为减少不必要的请求对源数据服务器造成负担, 设置数据缓存时长（单位：秒）, 只有经过该时间后才会进行新一轮的数据查询</span>
+            <span class="setting-desc">在[数据查询]页面查询时, 本程序会对今日数据进行一次查询, 为减少不必要的请求对源数据服务器造成负担, 设置数据缓存时长（单位：秒）,
+              只有经过该时间后才会进行新一轮的数据查询</span>
 
             <div class="input">
               <label>实时获取数据</label>
               <div id="real_time_cache_favorite" class="btn-group">
                 <div class="checkbox">
-                  <input type="radio" id="real_time_cache_favorite_true" name="real_time_cache_favorite" value="true"/>
+                  <input type="radio" id="real_time_cache_favorite_true" name="real_time_cache_favorite" value="true" />
                   <label for="real_time_cache_favorite_true">是</label>
                 </div>
                 <div class="checkbox">
-                  <input type="radio" id="real_time_cache_favorite_false" name="real_time_cache_favorite" value="false" />
+                  <input type="radio" id="real_time_cache_favorite_false" name="real_time_cache_favorite"
+                    value="false" />
                   <label for="real_time_cache_favorite_false">否</label>
                 </div>
               </div>
@@ -200,7 +197,8 @@
               <label for="daily_record_input">记录定时任务</label>
               <input id="daily_record_input" type="text" />
             </div>
-            <span class="setting-desc">即每日定时保存数据的时间, 默认为“59 23 * * *”, 即每晚23点59分保存数据, 具体语法请参考[Crontab], 此处修改不会立刻生效，请联系管理员重启应用</span>
+            <span class="setting-desc">即每日定时保存数据的时间, 默认为“59 23 * * *”, 即每晚23点59分保存数据, 具体语法请参考[Crontab],
+              此处修改不会立刻生效，请联系管理员重启应用</span>
 
             <div class="input">
               <label for="main_token_input">主授权令牌</label>
@@ -220,38 +218,136 @@
           </div>
           <div class="disclaimer">
             <h1>免责声明</h1>
-<p>感谢您选择使用本小班数据管理器。在使用本程序之前, 请您<strong>仔细阅读</strong>并理解以下免责声明内容：
+            <p>感谢您选择使用本小班数据管理器。在使用本程序之前, 请您<strong>仔细阅读</strong>并理解以下免责声明内容：
 
-1. 本程序基于[GPLv3]开源，仅供个人学习、研究和其他非商业性质的合法用途, 任何因违反相关法律法规或侵犯他人权益所导致的法律责任, 由用户自行承担。
-2. 用户在使用本程序时, 应遵守所在国家或地区的法律法规, 并对使用该程序产生的一切后果负全部责任。
-3. 本程序对于用户使用过程中可能产生的各种风险（包括但不限于被数据来源公司的封禁、用户自身合规问题等）不承担任何责任。
-4. 用户违反本声明或者滥用本程序进行非法活动的, 数据来源公司将有权追究您的法律责任。
-5. 本程序作者对用户使用本程序产生的一切纠纷、损失或伤害不承担任何责任。
-6. 一旦用户开始使用本程序, 则视为用户已充分理解并同意本免责声明的全部内容, 如果您无法接受上述条款, 请<strong>立即停止</strong>使用本程序。</p>
+              1. 本程序基于[GPLv3]开源，仅供个人学习、研究和其他非商业性质的合法用途, 任何因违反相关法律法规或侵犯他人权益所导致的法律责任, 由用户自行承担。
+              2. 用户在使用本程序时, 应遵守所在国家或地区的法律法规, 并对使用该程序产生的一切后果负全部责任。
+              3. 本程序对于用户使用过程中可能产生的各种风险（包括但不限于被数据来源公司的封禁、用户自身合规问题等）不承担任何责任。
+              4. 用户违反本声明或者滥用本程序进行非法活动的, 数据来源公司将有权追究您的法律责任。
+              5. 本程序作者对用户使用本程序产生的一切纠纷、损失或伤害不承担任何责任。
+              6. 一旦用户开始使用本程序, 则视为用户已充分理解并同意本免责声明的全部内容, 如果您无法接受上述条款, 请<strong>立即停止</strong>使用本程序。</p>
           </div>
         </div>
       </div>
-      
-      </div>
-
-  
-    </main>
-
-    
-    <div class="footer">
-      <footer>
-        <div class="info">
-          <input type="checkbox">
-          <span></span>
-          <span></span>
-          <span></span>
-          <div>
-            <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc</span>
+      <div class="wall-container group-detail-page hide" id="group-detail-page">
+        
+        <div class="group-info-container"></div>
+        <div class="paper">
+          <div class="member-info-container hide">
+            <div class="input-group">
+              <div class="input">
+                <label for="week_select">周数</label>
+                <select id="week_select" onkeyup="eventSearch(event)"></select>
+              </div>
+              <div class="input wrap-input">
+                <label for="display_left">展示已离开成员</label>
+                <div id="display_left" class="btn-group">
+                  <div class="checkbox">
+                    <input type="radio" id="display_left_true" name="display_left" value="true" checked />
+                    <label for="display_left_true">是</label>
+                  </div>
+                  <div class="checkbox">
+                    <input type="radio" id="display_left_false" name="display_left" value="false" />
+                    <label for="display_left_false">否</label>
+                  </div>
+                </div>
+              </div>
+              <div class="input wrap-input">
+                <label for="display_type">展示类型</label>
+                <div id="display_type" class="btn-group">
+                  <div class="checkbox">
+                    <input type="checkbox" id="display_cheat" checked />
+                    <label for="display_cheat">作弊</label>
+                  </div>
+                  <div class="checkbox">
+                    <input type="checkbox" id="display_late" checked />
+                    <label for="display_late">晚卡</label>
+                  </div>
+                  <div class="checkbox">
+                    <input type="checkbox" id="display_absence" checked />
+                    <label for="display_absence">缺卡</label>
+                  </div>
+                  <div class="checkbox">
+                    <input type="checkbox" id="display_all" />
+                    <label for="display_all">全员</label>
+                  </div>
+                </div>
+              </div>
+              <div class="btn-group">
+                <div id="search_btn" class="btn" onclick="queryGroupDetails()">查询</div>
+                <div id="setting_btn" class="btn" onclick="toggleSettingModal()">设置</div>
+              </div>
+            </div>
+            <div id="member_filter" class="search-input hide">
+              <span>🔍</span>
+              <input type="text" placeholder="筛选用户" onkeyup="memberFilter(event)" />
+            </div>
+            <div class="details-container"></div>
+          </div>
+          <span class="loading-text">
+            <div class="loader">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            数据获取中，请稍后...
+          </span>
+        </div>
+        <div id="setting_modal" class="modal hide" data-status="hidden" onclick="toggleSettingModal(event)">
+          <div class="modal-content">
+            <span class="modal-close-btn" onclick="toggleSettingModal()"></span>
+            <div class="modal-title">小班设置</div>
+            <div class="modal-body">
+              <div class="setting-group">
+                <div class="input">
+                  <label>每日记录开关</label>
+                  <div id="record_select" class="btn-group">
+                    <div class="checkbox">
+                      <input type="radio" id="record_select_true" name="record_select" value="1" />
+                      <label for="record_select_true">开启</label>
+                    </div>
+                    <div class="checkbox">
+                      <input type="radio" id="record_select_false" name="record_select" value="0" />
+                      <label for="record_select_false">关闭</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="input">
+                  <label for="late_time_input">晚卡时间</label>
+                  <input type="time" id="late_time_input" />
+                </div>
+                <div class="input">
+                  <label for="auth_token_input">授权令牌</label>
+                  <input type="text" id="auth_token_input" />
+                </div>
+                <div class="input-group">
+                  <div id="search_btn" class="btn" onclick="saveConfig()">保存设置</div>
+                  <div id="delete_btn" class="btn red-border" onclick="deleteGroup()">删除小班</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </footer>
+      </div>
     </div>
-    <div id="refresh_btn" class="left-corner-btn btn" onclick="refresh_data()">刷新</div>
+  </main>
+
+
+  <div class="footer">
+    <footer>
+      <div class="info">
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+        <span></span>
+        <div>
+          <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made
+            By Shadlc</span>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <div id="refresh_btn" class="left-corner-btn btn" onclick="refresh_data()">刷新</div>
   <div id="group_search_modal" class="modal hide" data-status="hidden" onclick="toggleGroupSearchModal(event)">
     <div class="modal-content">
       <span class="modal-close-btn" onclick="toggleGroupSearchModal()"></span>
@@ -267,59 +363,85 @@
       </div>
     </div>
   </div>
-<script src="lib/script.js"></script>
-<script src="lib/group.js"></script>
-<script src="lib/data.js"></script>
-<script src="lib/setting.js"></script>
-<script src="lib/switch_box.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="lib/notice_card.js"></script>
-<script>
-  //DOM加载完成后执行groupPage()函数
-  window.onload = function() {
-    groupPage();
-    // 建立到/test的sse连接
-    const source = new EventSource('/test');
-    source.onmessage = function(event) {
-      const data = event.data.split('#');
-            const messageObject = {};
-
-            data.forEach(line => {
-                const [key, value] = line.split('$');
-                if (key && value) {
-                    messageObject[key] = value;
-                }
-            });
-            // 将以上所有值转换成字符串
-            const card_message = messageObject['name'] + messageObject['message'];
-            $newCard(card_message)
-        };
+  <style>
+    .modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
-  function groupPage() {
-    // document.getElementsByClassName("group-page")[0].style.display = "block";
-    document.getElementById("group_button").classList.add("active");
-    document.getElementById("data_button").classList.remove("active");
-    document.getElementById("setting_button").classList.remove("active");
-    SwitchRight('group-page')
-    initGroupPage();
-  }
-  function dataPage() {
-    // document.getElementsByClassName("data-page")[0].style.display = "block";
-    document.getElementById("group_button").classList.remove("active");
-    document.getElementById("data_button").classList.add("active");
-    document.getElementById("setting_button").classList.remove("active");
-    SwitchRight('data-page')
-    initDataPage();
-  }
-  function settingPage() {
-    // document.getElementsByClassName("setting-page")[0].style.display = "block";
-    document.getElementById("group_button").classList.remove("active");
-    document.getElementById("data_button").classList.remove("active");
-    document.getElementById("setting_button").classList.add("active"); 
-    SwitchRight('setting-page')
-    initSettingPage();
-  }
+  </style>
+  <script src="lib/script.js"></script>
+  <script src="lib/group.js"></script>
+  <script src="lib/data.js"></script>
+  <script src="lib/setting.js"></script>
+  <script src="lib/group_details.js"></script>
+  <script src="lib/switch_box.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="lib/notice_card.js"></script>
+  <script>
+    var group_loaded = false;
+    var data_loaded = false;
+    var setting_loaded = false;
+    //DOM加载完成后执行groupPage()函数
+    window.onload = function () {
+      initCloud(30);
+      groupPage();
+      // 建立到/test的sse连接
+      const source = new EventSource('/test');
+      source.onmessage = function (event) {
+        const data = event.data.split('#');
+        const messageObject = {};
 
-</script>
+        data.forEach(line => {
+          const [key, value] = line.split('$');
+          if (key && value) {
+            messageObject[key] = value;
+          }
+        });
+        // 将以上所有值转换成字符串
+        const card_message = messageObject['name'] + messageObject['message'];
+        $newCard(card_message)
+      };
+    }
+    function groupPage() {
+      // document.getElementsByClassName("group-page")[0].style.display = "block";
+      document.getElementById("group_button").classList.add("active");
+      document.getElementById("data_button").classList.remove("active");
+      document.getElementById("setting_button").classList.remove("active");
+      SwitchRight('group-page')
+      if (!group_loaded) {
+        group_loaded = true;
+        initGroupPage();
+      }
+    }
+    function dataPage() {
+      // document.getElementsByClassName("data-page")[0].style.display = "block";
+      document.getElementById("group_button").classList.remove("active");
+      document.getElementById("data_button").classList.add("active");
+      document.getElementById("setting_button").classList.remove("active");
+      SwitchRight('data-page')
+      if (!data_loaded) {
+        data_loaded = true;
+        initDataPage();
+      }
+    }
+    function settingPage() {
+      // document.getElementsByClassName("setting-page")[0].style.display = "block";
+      document.getElementById("group_button").classList.remove("active");
+      document.getElementById("data_button").classList.remove("active");
+      document.getElementById("setting_button").classList.add("active");
+      SwitchRight('setting-page')
+      if (!setting_loaded) {
+        setting_loaded = true;
+        initSettingPage();
+      }
+    }
 
-<div id="scroll_top_btn" title="回到顶部">▲</div></body></html>
+  </script>
+
+  <div id="scroll_top_btn" title="回到顶部">▲</div>
+</body>
+
+</html>
