:bug: 修复部分已知bug与显示错误 1. 修复部分情况下小班数据获取异常问题 2. 修复移动设备小班简介超长显示错误 3. 优化无班长小班的展示

--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -1232,8 +1232,10 @@ table.simple-table td {
   align-content: stretch;
   justify-content: center;
   align-items: center;
+  width: 100%;
   min-height: 7rem;
   overflow: auto;
+  line-break: anywhere;
 }
 #group_result>span {
   font-weight: bold;
@@ -1526,7 +1528,7 @@ table.simple-table td {
   width: 2rem;
   height: 2rem;
   background: var(--white);
-  border: solid 0.2rem black;
+  border: solid 0.15rem black;
   border-radius: 100%;
   cursor: pointer;
   user-select: none;
