修复旧版布局，现在两个版本布局都可以正常使用

--- a/templates/data.html
+++ b/templates/data.html
@@ -27,7 +27,7 @@
       <div id="cloud_container"></div>
     </div>
     <main>
-      <div class="wall">
+      <div class="wall" style="width: 100%;">
         <div class="eaves">
           <div class="gloss"></div>
           <div class="eaves-container">
@@ -123,20 +123,20 @@
           </div>
         </div>
       </div>
-      <div class="footer">
-        <footer>
-          <div class="info">
-            <input type="checkbox">
-            <span></span>
-            <span></span>
-            <span></span>
-            <div>
-              <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc</span>
-            </div>
-          </div>
-        </footer>
-      </div>
     </main>
+    <div class="footer">
+      <footer>
+        <div class="info">
+          <input type="checkbox">
+          <span></span>
+          <span></span>
+          <span></span>
+          <div>
+            <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc&Cerenilla</span>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
   <script src="lib/script.js"></script>
   <script>
