--- a/templates/group.html
+++ b/templates/group.html
@@ -27,7 +27,7 @@
       <div id="cloud_container"></div>
     </div>
     <main>
-      <div class="wall">
+      <div class="wall" style="width: 100%;">
         <div class="eaves">
           <div class="gloss"></div>
           <div class="eaves-container">
@@ -54,21 +54,21 @@
         </div>
         </div>
       </div>
-      <div class="footer">
-        <footer>
-          <div class="info">
-            <input type="checkbox">
-            <span></span>
-            <span></span>
-            <span></span>
-            <div>
-              <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc</span>
-            </div>
-          </div>
-        </footer>
-      </div>
-      <div id="refresh_btn" class="left-corner-btn btn" onclick="refresh_data()">刷新</div>
     </main>
+    <div class="footer">
+      <footer>
+        <div class="info">
+          <input type="checkbox">
+          <span></span>
+          <span></span>
+          <span></span>
+          <div>
+            <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc&Cerenilla</span>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <div id="refresh_btn" class="left-corner-btn btn" onclick="refresh_data()">刷新</div>
     <div id="group_search_modal" class="modal hide" data-status="hidden" onclick="toggleGroupSearchModal(event)">
       <div class="modal-content">
         <span class="modal-close-btn" onclick="toggleGroupSearchModal()"></span>
