--- a/templates/details.html
+++ b/templates/details.html
@@ -11,7 +11,7 @@
   </head>
 
   <body class="inside-bg">
-    <main>
+    <main style="flex-direction: column;padding: 0;height: 100%;width: 100%;">
       <div class="group-info-container"></div>
       <div class="paper">
         <div class="member-info-container hide">
@@ -82,7 +82,7 @@
             <span></span>
             <span></span>
             <div>
-              <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc</span>
+              <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc&Cerenilla</span>
             </div>
           </div>
         </footer>
@@ -347,7 +347,7 @@
         <img class="rank-flag" src="../img/s`+group.rank+`.png" onclick="sway(event)" />
         <div class="tiny-notice" onclick="toggleNoticeModal()">
           <span>公告</span>
-        </div>
+        </div>  
         <div id="notice_modal" class="modal hide" data-status="hidden" onclick="toggleNoticeModal(event)">
           <div class="modal-content notice">
             <span class="modal-close-btn" onclick="toggleNoticeModal()"></span>
